[package]
name = "partial-mpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13", features = ["full"] }
dotenvy = "0.15.7"

# Alloy
alloy-provider = { git = "https://github.com/alloy-rs/alloy", features = [
  "ws",
], version = "0.1.1" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", version = "0.1.1" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", version = "0.1.1" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", version = "0.1.1" }
alloy-primitives = "0.7.1"
alloy-rlp = "0.3"
rlp = "0.5.2"


[features]
test-live = []
